refactor(path): elegant support for storage of more secret formats

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ wallet_layerzero_test.go
 wallet_prod_test.go
 gauth_test.go
 social_id_test.go
+path_social_id_test.go
+client/wallet_eth_test.go
+client/wallet_local_test.go
+client/wallet_text_local_test.go
